refactor(entity): 将审计字段类型从 String 统一改为 Long 以存储用户ID
- 将 AuditableEntity 中的 createdBy、updatedBy 字段类型从 String 改为 Long
- 将 SoftDeletableEntity 中的 deletedBy 字段类型从 String 改为 Long
- 更新所有相关的 DTO 响应类以使用 Long 类型审计字段
- 重构 OperatorUtil 工具类返回 Long 类型的用户ID而非字符串
- 更新 JpaAuditingConfig 和 SaTokenAuditorAware 配置以支持 Long 类型审计人
- 在 UserController 中优化集合操作使用 toList() 替代手动收集

此次重构实现了审计字段的类型标准化，为后续基于用户ID的关系查询和权限控制提供更好的支持